# my-audio-tool

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  ci.yml.py
src/audio_splitter/: __init__.py  cli.py  splitter.py
tests/: test_splitter.py
